Start writing the API connection system.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
   </head>
   <body class="stck-body">
     <div class="stck-body-wrapper">
-      <a href="sticky-page.html">Na razie tylko tutaj można</a>
+      <form class="board-name-form">
+        <input type="name" name="board-name" id="board-name-input" placeholder="Board name">
+        <button type="submit">Enter</button>
+      </form>
     </div>
     <script src="index.bundle.js"></script>
   </body>
