Change color palette, add working TinyMCE window

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body class="stck-body">
     <div class="stck-body-wrapper">
       <form class="board-name-form">
-        <input type="name" name="board-name" id="board-name-input" placeholder="Board name">
+        <input type="text" name="board-name" id="board-name-input" placeholder="Board name">
         <button type="submit">Enter</button>
       </form>
     </div>
