--- a/public/sticky-page.html
+++ b/public/sticky-page.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="board.css">
+    <script src="../node_modules/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
   </head>
   <body class="stck-brd-body">
+    <div class="tinymce-placeholder"></div>
     <div class="stck-brd">
       <div class="n-note">
-        <img src="images/new-note.png" alt="New Note" />
+        Add note
       </div>
     </div>
     <script src="board.bundle.js"></script>
