--- a/public/sticky-page.html
+++ b/public/sticky-page.html
@@ -17,6 +17,14 @@
       <div class="n-note">
         Add note
       </div>
+      <div class="board-info">
+        <div class="board-mileage">
+          Mileage: <span class="info-value">0</span>
+        </div>
+        <div class="board-notes">
+          On board: <span class="info-value">0</span>
+        </div>
+      </div>
     </div>
     <script src="board.bundle.js"></script>
   </body>
